test/spec_vectors/global/ok/module_49.wat
(module (global (export "g") i32 (i32.const 4)))