test/spec_vectors/global/fail/module_34.wat
(module (global i32 (i32.const 0)) (func (i32.const 0) (global.set 1)))